[package]
name = "suborbital"
version = "0.9.2"
authors = ["cohix <connorjhicks@gmail.com>"]
edition = "2018"
description = "Suborbital Wasm Runnable API"
license = "Apache-2.0"
repository = "https://github.com/suborbital/reactr"
homepage = "https://suborbital.dev"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
